# groundstation-frontend-2024

./: .gitignore  macos_logo.sh  populate_qrc.py  qrc-file.py
QT-GroundStation2024/: .gitignore  CMakeLists.txt  betterqgraphicstextitem.h  cmake_install.cmake  fonts.qrc  hprcCircularBuffer.h  hprcdisplaywidget.cpp  hprcdisplaywidget.h  hprcsubgraph.cpp  hprcsubgraph.h  hprcwebsocket.cpp  hprcwebsocket.h  images.qrc  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.qrc  maps.qrc  models.qrc  mousetrackinggraphicsview.h  payloadwindow.cpp  payloadwindow.ui  rocketwindow.h  rocketwindow.ui  speedtester.cpp  speedtester.h  stylepainters.cpp  stylepainters.h  styles.cpp  styles.h
QT-GroundStation2024/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
QT-GroundStation2024/Resources/: Resources.qrc  logo.icns
QT-GroundStation2024/Resources/Icons/: logo.aps
QT-GroundStation2024/Resources/Maps/: index.html
QT-GroundStation2024/Resources/Models/: HPRC_rocket.stl
QT-GroundStation2024/Util/: betterqgraphicstextitem.h  hprcCircularBuffer.h  hprcStateMap.h  hprcwebsocket.cpp  hprcwebsocket.h  mousetrackinggraphicsview.h  roundedQGraphicsRectItem.h  speedtester.cpp
QT-GroundStation2024/Widgets/: ConnectionIndicator.cpp  ConnectionIndicator.h  PayloadConnectionIndicator.cpp  PayloadConnectionIndicator.h  RocketConnectionIndicator.cpp  RocketConnectionIndicator.h  ServerConnectionIndicator.cpp  ServerConnectionIndicator.h  connectionIndicator.cpp  connectionIndicator.h  debugwidget.cpp  debugwidget.h  hprcAirbrakes.cpp  hprcAirbrakes.h  hprcAlarmPanel.cpp  hprcAlarmPanel.h  hprcAttitudeWidget.cpp  hprcAttitudeWidget.h  hprcClock.cpp  hprcClock.h  hprcDetailedViewWidget.cpp  hprcDetailedViewWidget.h  hprcGauge.cpp  hprcGauge.h  hprcPayloadBatteryVoltage.cpp  hprcPayloadBatteryVoltage.h  hprcPayloadGraph.cpp  hprcPayloadGraph.h  hprcPayloadMap.cpp  hprcPayloadMap.h  hprcRocketVisualizer.cpp  hprcRocketVisualizer.h  hprcServoStatusWidget.cpp  hprcServoStatusWidget.h  hprcTimeline.h  hprcViewer.cpp  hprcViewer.h  hprcdisplaywidget.cpp  hprcdisplaywidget.h  hprcgpslockindicator.cpp  (+13 more)
QT-GroundStation2024/Widgets/Indicators/: PayloadConnectionIndicator.cpp  PayloadConnectionIndicator.h  RocketConnectionIndicator.cpp  RocketConnectionIndicator.h  ServerConnectionIndicator.h  connectionIndicator.cpp  connectionIndicator.h
QT-GroundStation2024/Windows/: debugwindow.cpp  debugwindow.h  debugwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  p_debugwindow.cpp  p_debugwindow.h  p_debugwindow.ui  payloadwindow.h  payloadwindow.ui  rocketwindow.cpp  rocketwindow.h  rocketwindow.ui
build-QT-GroundStation2024-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  QT-GroundStation2024.ilk  build.ninja  cmake_install.cmake
build-QT-GroundStation2024-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-e85116eb4685828ad0bb.json  codemodel-v2-10ff903deaf5acddde47.json  codemodel-v2-4e93f364526e584893f6.json  directory-.-Debug-4a86fc21164257399fb5.json  index-2023-08-29T01-17-07-0889.json  index-2023-08-29T20-37-07-0375.json  (+3 more)
build-QT-GroundStation2024-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-b12ee00033f7259f1f4e.json  codemodel-v2-021c558555a242439478.json  codemodel-v2-671f9e1fe06495515c41.json  directory-.-Debug-9100bcc52f4fbd258c4b.json  directory-.-Debug-c134dc96b00171daebc3.json  index-2023-08-29T00-41-49-0081.json  index-2023-08-29T20-32-55-0708.json  target-QT-GroundStation2024-Debug-2223a19c2616e2f82010.json  target-QT-GroundStation2024-Debug-6be64b17d771418b215a.json  target-QT-GroundStation2024_autogen_timestamp_deps-Debug-29e46bd76f685c12054d.json
build-QT-GroundStation2024-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
build-QT-GroundStation2024-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-QT-GroundStation2024-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/QT-GroundStation2024_autogen/: deps  mocs_compilation.cpp
build-QT-GroundStation2024-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/QT-GroundStation2024_autogen/EWIEGA46WW/: moc_customwidget.cpp  moc_customwidget.cpp.d  moc_hprcdisplaywidget.cpp  moc_hprcdisplaywidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_styles.cpp  moc_styles.cpp.d
build-QT-GroundStation2024-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/QT-GroundStation2024_autogen/include/: ui_mainwindow.h
(+141 files in other folders)
